--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,20 +1,20 @@
 <header class="hero-header" id="hero-header"">
     <title>Ice cream made with passion</title>
-    <section class="menu-mobile">
+    <section class=" menu-mobile">
     <!-- hamburger menu -->
-        <div class="nav-container" tabindex="0">
-            <div class="nav-toggle"></div>
-            <ul class="nav-items">
-                <button class="nav-items__button"><a href="#" class="nav-items__buy">Buy now<span
-                            class="nav-items__marker">&gt;</span></a></button>
-                <li class="nav-item"><a class="nav-item__anchor" href="#hero-header">Home</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#slick">About us</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#about">How it's made?</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#products">Our products</a></li>
-                <li class="nav-item"><a class="nav-item__anchor" href="#contacts">Contact</a></li>
-            </ul>
-        </div>
-        <!-- hamburger menu -->
+    <div class="nav-container" tabindex="0">
+        <div class="nav-toggle"></div>
+        <ul class="nav-items">
+            <button class="nav-items__button" data-modal-open2><a href="#" class="nav-items__buy">Buy now<span
+                        class="nav-items__marker">&gt;</span></a></button>
+            <li class="nav-item"><a class="nav-item__anchor" href="#hero-header">Home</a></li>
+            <li class="nav-item"><a class="nav-item__anchor" href="#slick">About us</a></li>
+            <li class="nav-item"><a class="nav-item__anchor" href="#about">How it's made?</a></li>
+            <li class="nav-item"><a class="nav-item__anchor" href="#products">Our products</a></li>
+            <li class="nav-item"><a class="nav-item__anchor" href="#contacts">Contact</a></li>
+        </ul>
+    </div>
+    <!-- hamburger menu -->
     </section>
     <section class="hero-header__top header-top">
         <div class="header-top__logo">
@@ -27,7 +27,8 @@
             <li class="header-menu__item"><a class="header-menu__anchor" href="#products">Our products</a></li>
             <li class="header-menu__item"><a class="header-menu__anchor" href="#contacts">Contact</a></li>
         </ul>
-        <button class="header-top__buy" data-modal-open><a class="header-top__buylink" href="#" >Buy now &gt;</a></button>
+        <button class="header-top__buy" data-modal-open><a class="header-top__buylink" href="#">Buy now
+                &gt;</a></button>
         <!-- topic -->
     </section>
     <section class="hero-header__topic header-topic">
@@ -60,9 +61,12 @@
 
     <!-- imgs-->
     <section class="hero-header__images">
-        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png" srcset="../src/images/lód-headerx2.png 2x"></div>
-        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png" srcset="../src/images/milkx2.png 2x"></div>
-        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png" srcset="../src/images/tastyx2.png 2x"></div>
+        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png"
+                srcset="../src/images/lód-headerx2.png 2x"></div>
+        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png"
+                srcset="../src/images/milkx2.png 2x"></div>
+        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png"
+                srcset="../src/images/tastyx2.png 2x"></div>
     </section>
     <!-- imgs -->
     <div class="hero-header__span header-span">
@@ -112,6 +116,51 @@
             <button class="index-modal-form__button" type="submit">Wyślij</button>
         </form>
         <button class="index-modal-form__closebtn" type="button" data-modal-close>
+            <div class="index-modal-form__x">X</div>
+        </button>
+    </div>
+</div>
+
+<div class="backdrop is-hidden2" data-modal2>
+    <div class="modal">
+        <form class="index-modal-form modal__item">
+            <span class="index-modal-form__leavedata">Zostaw swoje dane w formularzu poniżej</span>
+            <label for="user" class="index-modal-form__label">
+                <span class="index-modal-form__user">Imie</span>
+                <input type="textarea" class="index-modal-form__userarea index-modal-form__userarea--userplace"
+                    name="user" required><svg width="18" height="18" class="index-modal-form__usersvg">
+                    <use href="images/sprite.svg#icon-person-black-18dp-1"></use>
+                </svg>
+            </label>
+            <label for="phone-number" class="index-modal-form__label">
+                <span class="index-modal-form__tel">Telefon</span>
+                <input type="tel" name="phone-number"
+                    class="index-modal-form__telarea index-modal-form__telarea--telplace" required><svg width="18"
+                    height="18" class="index-modal-form__telsvg">
+                    <use href="images/sprite.svg#icon-phone-black-18dp-1"></use>
+                </svg>
+            </label>
+            <label for="email" class="index-modal-form__label">
+                <span class="index-modal-form__tel">Email</span>
+                <input type="email" class="index-modal-form__emailarea index-modal-form__emailarea--emailplace"
+                    name="email" required><svg width="18" height="18" class="index-modal-form__emailsvg">
+                    <use href="images/sprite.svg#icon-email-black-18dp-1"></use>
+                </svg>
+            </label>
+            <label for="comment" class="index-modal-form">
+                <span class="index-modal-form__comment">Uwagi odnośnie zamówienia</span>
+                <input type="textarea" name="comment" placeholder="Wprowadź tekst"
+                    class="index-modal-form__commentplace">
+            </label>
+            <label class="index-modal-form__label index-modal-form__label--checkbox">
+                <input name="checkbox" type="checkbox" class="index-modal-form__checkbox" required>
+                <p class="index-modal-form__policytext">Oświadczam iż akceptuję <span
+                        class="index-modal-form__span">Regulamin</span> i <span class="index-modal-form__span">Politykę
+                        Prywatności</span>.</p>
+            </label>
+            <button class="index-modal-form__button" type="submit">Wyślij</button>
+        </form>
+        <button class="index-modal-form__closebtn" type="button" data-modal-close2>
             <div class="index-modal-form__x">X</div>
         </button>
     </div>
