--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -82,17 +82,22 @@
     padding-left: 43px;
     margin-right: auto;
     cursor: pointer;
+    transition-property: transform;
+    transition-duration: 20ms;
+    
     transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
       color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
         
       &:hover,
       &:focus {
+        transform: scale(1.1);
         background-color: #d41342;
         color: #ffffff;
       }
           
       &:hover .localisation-buttons__icon,
       &:focus .localisation-buttons__icon {
+          transform: scale(1.1);
          fill: #ffffff;
       }
   }
