--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -95,6 +95,8 @@
     font-size: 16px;
     line-height: 21px;
     color: #fff;
+    transition-property: transform;
+    transition-duration: 500ms;
 }
 
 .header-menu__anchor:hover {
@@ -120,12 +122,15 @@
         right: 1%;
         z-index: 2001;
         cursor: pointer;
+        transition-property: transform;
+        transition-duration: 500ms;
         transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
                 color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
         
             &:hover,
             &:focus,
             &:focus-within {
+                transform: scale(1.1);
                 background-color: #d41342;
                 color: #ffffff;
             }
@@ -291,6 +296,8 @@
     margin-left: 20px;
     position: relative;
     z-index: 902;
+    transition-duration: 500ms;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
 }
 
 @media screen and(min-width: 767px) {
@@ -309,6 +316,7 @@
 }
 
 .hero-button__product:hover {
+    transform: scale(1.1);
     background: #D41443;
     transition: background-color 1s cubic-bezier(.165, .84, .44, 1);
 }
@@ -321,6 +329,8 @@
     border: none;
     position: relative;
     z-index: 903;
+    transition-property: transform;
+    transition-duration: 500ms;
 }
 
 @media screen and(min-width: 1200px) {
@@ -331,6 +341,7 @@
 }
 
 .hero-button__how:hover {
+    transform: scale(1.1);
     background: #D41443;
     transition: background-color 1s cubic-bezier(.165, .84, .44, 1);
 }
