--- a/src/sass/components/_footer-social-links.scss
+++ b/src/sass/components/_footer-social-links.scss
@@ -12,10 +12,13 @@
     height: 34px;
     border-radius: 50%;
     background-color: #fea5bb;
+    transition-property: transform;
+    transition-duration: 500ms;
     transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
     &:hover,
     &:focus {
+      transform: scale(1.2);
       background-color: #d41443;
     }
   }
