--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="produscts container" id="products">
   <div>
-    <h2 class="products-second__heading">100% NATURAL</h2>
-    <h1 class="products-first__heading">PRODUCTS</h1>
+    <div class="products-second__heading">100% NATURAL</div>
+    <h2 class="products-first__heading">PRODUCTS</h2>
   </div>
   <ul class="product">
     <li class="product__pink">
