--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './products/_products-list';
 
 @import './about';
+@import './menu_modal/read-more-modal';
 @import './advantages';
 @import './gallery';
 @import './customer-reviews';
