--- a/src/sass/products/_products-list.scss
+++ b/src/sass/products/_products-list.scss
@@ -140,6 +140,7 @@
     margin: 0 auto;
     width: 40px;
     height: 40px;
+    margin-bottom: 41px;
     cursor: pointer;
     border: none;
     padding-top: 2px;
@@ -229,6 +230,10 @@
 @media screen and (min-width: 1200px) {
   .product {
     gap: 30px;
+
+    &__btn{
+      margin-bottom: 50px;
+    }
 
     &__pink {
       width: 100%;
