--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -18,7 +18,7 @@
     </section>
     <section class="hero-header__top header-top">
         <div class="header-top__logo">
-            <img class="header-top__img" src="../src/images/logo 1.png" srcset="../src/images/logox2.png 2x">
+            <img class="header-top__img" src="../src/images/header/logo 1.png" srcset="../src/images/header/logox2.png 2x">
         </div>
         <ul class="hero-header__menu header-menu">
             <li class="header-menu__item"><a class="header-menu__anchor" href="#hero-header">Home</a></li>
@@ -50,29 +50,29 @@
     <section class="hero-header__eat header-eat">
         <div class="header-eat__number --cafes">
             <p>16</p><span class="header-eat__span">cafes</span><img class="header-eat__cafecircle"
-                src="../src/images/number-circle.png">
+                src="../src/images/header/number-circle.png">
         </div>
         <div class="header-eat__number --foodtrucks">
             <p>23</p><span class="header-eat__span --trucks-span">food trucks</span><img class="header-eat__truckcircle"
-                src="../src/images/number-circle.png">
+                src="../src/images/header/number-circle.png">
         </div>
     </section>
     <!-- food trucks cafes -->
 
     <!-- imgs-->
     <section class="hero-header__images">
-        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/lód-header.png"
-                srcset="../src/images/lód-headerx2.png 2x"></div>
-        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/milk.png"
-                srcset="../src/images/milkx2.png 2x"></div>
-        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/tasty.png"
-                srcset="../src/images/tastyx2.png 2x"></div>
+        <div class="hero-header__icediv"><img class=header-bottom__icecream src="../src/images/header/lód-header.png"
+                srcset="../src/images/header/lód-headerx2.png 2x"></div>
+        <div class="hero-header__milkdiv"><img class=header-bottom__milk src="../src/images/header/milk.png"
+                srcset="../src/images/header/milkx2.png 2x"></div>
+        <div class="hero-header__tastydiv"><img class=header-bottom__tasty src="../src/images/header/tastyx2.png"
+                srcset="../src/images/header/tastyx2.png 2x"></div>
     </section>
     <!-- imgs -->
     <div class="hero-header__span header-span">
         <span class="header-span__lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et</span>
-        <img class="header-span__arrow" src="../src/images/arrow.png">
+        <img class="header-span__arrow" src="../src/images/header/arrow.png">
     </div>
 </header>
 
@@ -84,7 +84,7 @@
                 <span class="index-modal-form__user">Imie</span>
                 <input type="textarea" class="index-modal-form__userarea index-modal-form__userarea--userplace"
                     name="user" required><svg width="18" height="18" class="index-modal-form__usersvg">
-                    <use href="images/sprite.svg#icon-person-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-person-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="phone-number" class="index-modal-form__label">
@@ -92,14 +92,14 @@
                 <input type="tel" name="phone-number"
                     class="index-modal-form__telarea index-modal-form__telarea--telplace" required><svg width="18"
                     height="18" class="index-modal-form__telsvg">
-                    <use href="images/sprite.svg#icon-phone-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-phone-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="email" class="index-modal-form__label">
                 <span class="index-modal-form__tel">Email</span>
                 <input type="email" class="index-modal-form__emailarea index-modal-form__emailarea--emailplace"
                     name="email" required><svg width="18" height="18" class="index-modal-form__emailsvg">
-                    <use href="images/sprite.svg#icon-email-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-email-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="comment" class="index-modal-form">
@@ -129,7 +129,7 @@
                 <span class="index-modal-form__user">Imie</span>
                 <input type="textarea" class="index-modal-form__userarea index-modal-form__userarea--userplace"
                     name="user" required><svg width="18" height="18" class="index-modal-form__usersvg">
-                    <use href="images/sprite.svg#icon-person-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-person-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="phone-number" class="index-modal-form__label">
@@ -137,14 +137,14 @@
                 <input type="tel" name="phone-number"
                     class="index-modal-form__telarea index-modal-form__telarea--telplace" required><svg width="18"
                     height="18" class="index-modal-form__telsvg">
-                    <use href="images/sprite.svg#icon-phone-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-phone-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="email" class="index-modal-form__label">
                 <span class="index-modal-form__tel">Email</span>
                 <input type="email" class="index-modal-form__emailarea index-modal-form__emailarea--emailplace"
                     name="email" required><svg width="18" height="18" class="index-modal-form__emailsvg">
-                    <use href="images/sprite.svg#icon-email-black-18dp-1"></use>
+                    <use href="images/header/sprite.svg#icon-email-black-18dp-1"></use>
                 </svg>
             </label>
             <label for="comment" class="index-modal-form">
