--- a/src/sass/pages/_header-hero.scss
+++ b/src/sass/pages/_header-hero.scss
@@ -533,7 +533,7 @@
 (min-resolution: 2dppx) {
     .hero-header__icediv {
         position: relative;
-        background-image: url("/images/elipse-mobile.png");
+        background-image: url("/images/header/elipse-mobile.png");
         background-size: 360px;
         background-repeat: no-repeat;
         width: 100%;
@@ -544,7 +544,7 @@
 
 .hero-header__icediv {
     position: relative;
-    background-image: url("/images/elipse-mobile.png");
+    background-image: url("/images/header/elipse-mobile.png");
     background-size: 360px;
     background-repeat: no-repeat;
     width: 100%;
