--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,26 +2,25 @@
 @import './utils/variables';
 @import './utils/visually-hidden';
 
-@import './general/general-styles';
+@import './layout/general-styles';
 @import './base/container';
 
-@import './hamburger/hamburger';
-@import './header-hero';
-@import './menu_modal/index-modal-form';
+@import './components/hamburger';
+@import './pages/header-hero';
+@import './components/index-modal-form';
 
 
-@import './products/_products-heading';
-@import './products/_products-list';
+@import './pages/_products-heading';
+@import './pages/_products-list';
 
-@import './about';
-@import './menu_modal/read-more-modal';
-@import './advantages';
-@import './gallery';
-@import './customer-reviews';
-@import './contacts';
-@import './footer';
+@import './pages/about';
+@import './components/read-more-modal';
+@import './pages/advantages';
+@import './pages/gallery';
+@import './pages/customer-reviews';
+@import './pages/contacts';
+@import './pages/footer';
 
-//Contacts
 @import './layout/contacts-section';
 @import './components/contacts-list';
 @import './components/contacts-buttons';
