--- a/src/sass/pages/_customer-reviews.scss
+++ b/src/sass/pages/_customer-reviews.scss
@@ -1,5 +1,8 @@
 .slick-slider {
   padding-top: 80px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-right: 20px;
   padding-bottom: 170px;
   background-color: #fff;
 
