--- a/src/sass/components/_index-modal-form.scss
+++ b/src/sass/components/_index-modal-form.scss
@@ -101,7 +101,8 @@
 }
 
 .index-modal-form__leavedata {
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -128,7 +129,8 @@
 .index-modal-form__user {
     margin-left: 40px;
     margin-bottom: 4px;
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -226,7 +228,8 @@
 .index-modal-form__tel {
     margin-left: 40px;
     margin-bottom: 4px;
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -324,7 +327,8 @@
 .index-modal-form__email {
     margin-left: 40px;
     margin-bottom: 4px;
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -422,7 +426,8 @@
 .index-modal-form__comment {
     margin-left: 40px;
     margin-bottom: 4px;
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -487,7 +492,8 @@
 }
 
 .index-modal-form__commentplace::placeholder {
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -554,7 +560,8 @@
 .index-modal-form__policytext {
     margin-left: 7px;
     margin-bottom: 4.75px;
-    font-family: 'Roboto';
+    font-family: 'DM Sans',
+        sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -580,7 +587,8 @@
     .index-modal-form__policytext {
         margin-left: 7px;
         margin-bottom: 4.75px;
-        font-family: 'Roboto';
+        font-family: 'DM Sans',
+            sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
@@ -632,7 +640,7 @@
 }
 
 .index-modal-form__checkbox:checked+.index-modal-form__policytext::before {
-    background-image: url(../images/iconcheck.svg);
+    background-image: url(../images/header/iconcheck.svg);
     content: "";
     display: flex;
     align-items: center;
