--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -1,6 +1,6 @@
 <section class="slick-slider">
   <div class="container">
-    <h2 class="slick__title visually-hidden" id="customer-reviews">Customer reviews</h2>
+    <h2 hidden id="customer-reviews">Customer reviews</h2>
     <ul class="slick">
       <li class="slick__item">
         <img
