--- a/src/sass/components/_index-modal-form.scss
+++ b/src/sass/components/_index-modal-form.scss
@@ -7,7 +7,7 @@
     left: 50%;
     transform: translate(-50%);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    border-radius: 20px;
 }
 
 @media screen and(min-width: 320px) {
@@ -20,7 +20,7 @@
         left: 50%;
         transform: translate(-50%);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
+        border-radius: 19px;
     }
 }
 
@@ -34,7 +34,7 @@
         left: 50%;
         transform: translate(-50%);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
+        border-radius: 19px;
     }
 }
 
@@ -48,7 +48,7 @@
         left: 50%;
         transform: translate(-50%);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 4px;
+        border-radius: 19px;
     }
 }
 
@@ -574,7 +574,8 @@
     .index-modal-form__policytext {
         margin-left: 7px;
         margin-bottom: 4.75px;
-        font-family: 'Roboto';
+        font-family: 'DM Sans',
+            sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
@@ -660,54 +661,70 @@
 }
 
 .index-modal-form__button {
-    width: 160px;
+    background-color: #ffffff;
     height: 44px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
     border-radius: 22px;
-    background-color: #fff;
     border: none;
-    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
-        color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
-
-    border: none;
-    width: 200px;
-    height: 50px;
-    margin: 30px 164px 40px 164px;
-    padding: 0;
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: #d41443;
     cursor: pointer;
-
-    &:hover,
-    &:focus,
-    &:focus-within {
-        background-color: var(--product-pink);
-        color: var(--dark-pink);
-        ;
-    }
+    transition-property: transform;
+    transition-duration: 500ms;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+    color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: var(--product-pink);
+            color: #ffffff;
+            transform: scale(1.1);
+        }
 }
 
 @media screen and(min-width: 320px) {
     .index-modal-form__button {
-        width: 160px;
-        height: 44px;
-        border-radius: 22px;
-        background-color: #fff;
-        border: none;
-        transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
-            color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
-        border: none;
-        width: 200px;
-        height: 50px;
-        margin: 0 auto;
-        padding: 0;
-        cursor: pointer;
+    background-color: #ffffff;
+    width: 166px;
+    height: 44px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    border-radius: 22px;
+    border: none;
+    font-family: 'DM Sans';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: #d41443;
+    cursor: pointer;
+    transition-property: transform;
+    transition-duration: 500ms;
+    transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
+    color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    
+        &:hover,
+        &:focus {
+            background-color: var(--product-pink);
+            color: #ffffff;
+            transform: scale(1.1);
+        }
     }
 }
 
 .index-modal-form__closebtn {
     position: absolute;
     cursor: pointer;
+    width: 30px;
+    height: 30px;
     right: 0%;
     top: 0%;
-    margin: 8px 8px 0 0;
+    margin: 12px 12px 0 0;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
