--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1963,18 +1963,15 @@ body {
     margin-bottom: 62px;
   }
 }
-#more1 {
+/*#more1 {
   display: none;
 }
-
 #more2 {
   display: none;
 }
-
 #more3 {
   display: none;
-}
-
+}*/
 .about {
   background-color: #fff5f6;
   width: 100%;
