--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -753,8 +753,29 @@ body {
   height: 410px;
   margin-left: 40px;
   margin-top: -8px;
+  -webkit-animation: rotateY 1500ms infinite alternate ease-in-out 1000ms;
+          animation: rotateY 1500ms infinite alternate ease-in-out 1000ms;
+  -webkit-animation-iteration-count: 2;
+          animation-iteration-count: 2;
 }
 
+@-webkit-keyframes rotateY {
+  0% {
+    transform: perspective(400px) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(400px) rotateY(30deg);
+  }
+}
+
+@keyframes rotateY {
+  0% {
+    transform: perspective(400px) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(400px) rotateY(30deg);
+  }
+}
 @media screen and (min-width: 767px) {
   .header-bottom__icecream {
     width: 143px;
