--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,50 @@
 <section class="produscts container" id="products">
+  <script>
+    function myFunction1() {
+      var dots = document.getElementById('dots1');
+      var moreText = document.getElementById('more1');
+
+      if (dots.style.display === 'none') {
+        dots.style.display = 'inline';
+        moreText.style.display = 'none';
+      } else {
+        dots.style.display = 'none';
+        moreText.style.display = 'inline';
+      }
+    }
+  </script>
+  <script>
+    function myFunction2() {
+      var dots = document.getElementById('dots2');
+      var moreText = document.getElementById('more2');
+
+      if (dots.style.display === 'none') {
+        dots.style.display = 'inline';
+
+        moreText.style.display = 'none';
+      } else {
+        dots.style.display = 'none';
+
+        moreText.style.display = 'inline';
+      }
+    }
+  </script>
+  <script>
+    function myFunction3() {
+      var dots = document.getElementById('dots3');
+      var moreText = document.getElementById('more3');
+
+      if (dots.style.display === 'none') {
+        dots.style.display = 'inline';
+
+        moreText.style.display = 'none';
+      } else {
+        dots.style.display = 'none';
+
+        moreText.style.display = 'inline';
+      }
+    }
+  </script>
   <div>
     <div class="products-second__heading">100% NATURAL</div>
     <h2 class="products-first__heading">PRODUCTS</h2>
