--- a/src/sass/pages/_header-hero.scss
+++ b/src/sass/pages/_header-hero.scss
@@ -45,6 +45,18 @@
     display: block;
     max-width: 100%;
     max-height: 100%;
+    animation: rotateX 1500ms infinite alternate ease-in-out 1500ms;
+    animation-iteration-count: 2;
+}
+
+@keyframes rotateX {
+    0% {
+        transform: perspective(400px) rotateX(-30deg);
+    }
+
+    100% {
+        transform: perspective(400px) rotateX(30deg);
+    }
 }
 
 @media screen and(min-width: 767px) {
@@ -61,6 +73,7 @@
         display: block;
         max-width: 100%;
         max-height: 100%;
+
     }
 }
 
@@ -580,7 +593,6 @@
     height: 410px;
     margin-left: 40px;
     margin-top: -8px;
-
     animation: rotateY 1500ms infinite alternate ease-in-out 1000ms;
     animation-iteration-count: 2;
     
