--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -52,11 +52,13 @@
             >
         </div>
 </section>
-<div class="backdrop is-hidden" read-more>
+<div class="backdrop" read-more>
     <div class="modal-read-more">
         
-        <button class="index-modal-form__closebtn" type="button" read-more-close>
-            <div class="index-modal-form__x">X</div>
+        <button class="modal-read-more__close-btn" type="button" read-more-close>
+            <svg class="modal-read-more__svg" >
+                <use href="./images/icons.svg#cross" ></use>
+            </svg>
         </button>
     </div>
 </div>
