--- a/src/sass/components/_read-more-modal.scss
+++ b/src/sass/components/_read-more-modal.scss
@@ -8,4 +8,22 @@
     transform: translate(-50%);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    
+    &__close-btn{
+        box-sizing:content-box;
+        border-radius: 50%;
+        border: none;
+        cursor: pointer;
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        width: 30px;
+        height: 30px;
+    }
+    &__svg{
+    fill: var(p);
+    width: 20px;
+    height: 20px;
+    padding: 3px;
+    }
 }
