--- a/src/sass/pages/_about.scss
+++ b/src/sass/pages/_about.scss
@@ -2,6 +2,7 @@
     background-color: #fff5f6;
     width: 100%;
     margin-top: 98px;
+    position: relative;
   }
   .about__above-title {
     font-family: "Titan One";
@@ -106,7 +107,7 @@
     position:absolute;
     max-height: 133px;
     left: 0;
-   top: 3480px;
+   top: 766px;
     z-index: 10;
   }
   .about__milk--desktop {
@@ -176,7 +177,7 @@
       width: 100%;
       position: absolute;
       left: 0;
-      top: 2000px;
+      top: 342px;
       max-height: 534px;
       z-index: 10;
   }
