--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -52,7 +52,7 @@
             >
         </div>
 </section>
-<div class="backdrop" read-more>
+<div class="backdrop is-hidden" read-more>
     <div class="modal-read-more">
         
         <button class="modal-read-more__close-btn" type="button" read-more-close>
